--- a/src/app/donate-form/donate-form.component.css
+++ b/src/app/donate-form/donate-form.component.css
@@ -1,7 +1,117 @@
-.medicines {
+.container {
+  margin-top: 150px;
+
+  place-content: center;
+  margin-top: 50px;
   display: grid;
   gap: 2rem;
 
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   /* grid-template-columns: 1fr 1fr; */
+}
+
+.hover {
+  box-shadow: 0 0 3px #ffc60a, 0 0 5px #ffc60a, 0 0 5px #ffc60a, 0 0 5px #ffc60a;
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 60%;
+}
+
+@media (min-width: 60em) {
+  .featured {
+    grid-row: span 2;
+    grid-column: span 2;
+    font-size: calc(100% + 0.1vw);
+  }
+}
+
+.hover-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 90;
+  transition: all 0.4s;
+}
+
+.hover img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all 0.3s;
+}
+
+.hover-content {
+  position: relative;
+  z-index: 99;
+}
+
+.hover-2 .hover-overlay {
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1));
+}
+
+.hover-2-title {
+  position: absolute;
+  font-size: calc(150% + 0.1vw);
+  top: 50%;
+  left: 0;
+  text-align: center;
+  width: 100%;
+  z-index: 99;
+  transition: all 0.3s;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  /* number of lines to show */
+  -webkit-box-orient: vertical;
+}
+
+.hover-2-description {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  opacity: 0;
+  left: 0;
+  text-align: center;
+  z-index: 99;
+  transition: all 0.3s;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  /* number of lines to show */
+  -webkit-box-orient: vertical;
+}
+
+.hover-2-user {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  opacity: 0;
+  left: 0;
+  text-align: center;
+  z-index: 99;
+  transition: all 0.3s;
+}
+
+.hover-2:hover .hover-2-title {
+  transform: translateY(-1rem);
+}
+
+.hover-2:hover .hover-2-description {
+  bottom: 2em;
+  opacity: 1;
+}
+
+.hover-2:hover .hover-2-user {
+  bottom: 0.2rem;
+  opacity: 1;
+}
+
+.hover-2:hover .hover-overlay {
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1));
 }
