--- a/src/app/donating-thanks/donating-thanks.component.html
+++ b/src/app/donating-thanks/donating-thanks.component.html
@@ -12,7 +12,7 @@
 
   <h1>Thank you For Your donation</h1>
   <h3>The M-Pesa details will be sent t your phone number</h3>
-  <button class="btn"><a href="/medicines">Back To Medicines</a></button>
+  <button class="btn"><a href="medicines">Back To Medicines</a></button>
 </body>
 
 </html>
