--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -20,17 +20,20 @@
 
 .mask-custom {
   backdrop-filter: blur(5px);
-  background-color: rgba(255, 255, 255, 0.15);
   border-style: solid;
   border-width: 1px;
-  border-color: #fff;
+  border-color: #fdbe33;
 }
 
 .navbar-brand {
   font-size: 1.75rem;
   letter-spacing: 3px;
+  border-color: #fdbe33;
 }
+/* nav {
+  bottom: 50px;
+} */
 
-nav {
-  margin-bottom: 50px;
+* {
+  text-decoration: none;
 }
