--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -64,68 +64,19 @@
 
   <hr>
 
-  <div class="container">
-    <div class="row" style="padding-top: 600px;">
-      <div class="col-sm-4" style="padding-bottom: 20px;">
-        <div class="card" style="width: 18rem;">
-          <a href="#" target="_blank" rel="noopener noreferrer"><img
-              src="https://images.unsplash.com/photo-1530026186672-2cd00ffc50fe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGVhcnQlMjBhdHRhY2t8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-              class="card-img-top" alt="..."></a>
-          <div class="card-body">
-            <h3>Cardiology</h3>
+  <div class="container_disease">
+    <div *ngFor="let disease of diseases">
+
+      <a href="/donation-form/{{disease.id}}">
+        <div class="hover hover-2 text-white rounded"><img src="{{cloud}}{{disease.picture}}" alt="">
+          <div class="hover-overlay"></div>
+          <div class="hover-2-content px-5 py-4">
+            <h3 class="hover-2-title text-uppercase font-weight-bold mb-0"> <span
+                class="font-weight-light">{{disease.name}}</span></h3>
+            <p class="hover-2-description  mb-0">Kindly Donate to {{disease.name}}</p>
           </div>
         </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" style="width: 18rem;">
-          <img
-            src="https://media.istockphoto.com/photos/hairy-cell-leukemia-picture-id1076111804?b=1&k=20&m=1076111804&s=170667a&w=0&h=qpC2tv10t385K9Kk9tozpwBrAOqUwajlHWXPYGVFGH8="
-            alt="">
-          <div class="card-body">
-            <h3>Leukemia</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" style="width: 18rem;">
-          <img
-            src="https://images.unsplash.com/photo-1598885159329-9377168ac375?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8b25jb2xvZ3l8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-            class="card-img-top" alt="...">
-          <div class="card-body">
-            <h3>Breast Cancer</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" style="width: 18rem;">
-          <img
-            src="https://media.istockphoto.com/photos/human-respiratory-system-lungs-anatomy-picture-id1323656101?b=1&k=20&m=1323656101&s=170667a&w=0&h=6nxCoJmwwMQ8Z_WE8adQvHUI4jPCIt1Sd7BJipJ0vnY="
-            alt="">
-          <div class="card-body">
-            <h3>Chronic Obstructive Pulmonary Disease</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" style="width: 18rem;">
-          <img
-            src="https://media.istockphoto.com/photos/adult-and-child-hands-holding-encephalography-brain-paper-cutout-picture-id1210226574?b=1&k=20&m=1210226574&s=170667a&w=0&h=1MbOtp_dDI6JD_aFx3J6JNd6-BDCFQIIpm9kg6dllW8="
-            alt="">
-          <div class="card-body">
-            <h3>Epilepsy</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" style="width: 18rem;">
-          <img
-            src="https://media.istockphoto.com/photos/emotional-stress-ilusions-picture-id680399070?b=1&k=20&m=680399070&s=170667a&w=0&h=0y4DTu7pkJ054Mag8a9KAawL6wdP7RaclkzNMxuPjAY="
-            alt="">
-          <div class="card-body">
-            <h3>Schizophrenia</h3>
-          </div>
-        </div>
-      </div>
+      </a>
     </div>
   </div>
   <hr style="margin-top: 50px;">
