--- a/src/app/landing2/landing2.component.css
+++ b/src/app/landing2/landing2.component.css
@@ -1,3 +1,7 @@
+* {
+  text-decoration: none;
+}
+
 .background {
   color: rgb(255, 255, 255);
   background-color: black;
@@ -17,7 +21,27 @@
 .container {
   opacity: 1;
 }
+.search_bar {
+  width: 60vh;
+  height: 50px;
+  border-radius: 10px;
+}
 
+.search_bar_list {
+  color: #20212b;
+  display: grid;
+  place-content: center;
+  background-color: rgb(255, 255, 255);
+  width: 60vh;
+  height: 40px;
+  border-color: #20212b6c;
+  border-style: solid;
+  border-width: 0.5px;
+}
+
+.search_bar_items {
+  position: absolute;
+}
 .btn.btn-custom {
   margin: 30px;
   padding: 12px 20px;
@@ -41,4 +65,196 @@
 .btn:focus,
 .form-control:focus {
   box-shadow: none;
+}
+
+/* ******************************** */
+/* ******diseases hover ************/
+.container_disease {
+  place-content: center;
+  margin-top: 50px;
+  display: grid;
+  gap: 2rem;
+
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  /* grid-template-columns: 1fr 1fr; */
+}
+
+.hover {
+  box-shadow: 0 0 3px #ffc60a, 0 0 5px #ffc60a, 0 0 5px #ffc60a, 0 0 5px #ffc60a;
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 60%;
+}
+
+@media (min-width: 60em) {
+  .featured {
+    grid-row: span 2;
+    grid-column: span 2;
+    font-size: calc(100% + 0.1vw);
+  }
+}
+
+.hover-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 90;
+  transition: all 0.4s;
+}
+
+.hover img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all 0.3s;
+}
+
+.hover-content {
+  position: relative;
+  z-index: 99;
+}
+
+.hover-2 .hover-overlay {
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1));
+}
+
+.hover-2-title {
+  position: absolute;
+  font-size: calc(150% + 0.1vw);
+  top: 50%;
+  left: 0;
+  text-align: center;
+  width: 100%;
+  z-index: 99;
+  transition: all 0.3s;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  /* number of lines to show */
+  -webkit-box-orient: vertical;
+}
+
+.hover-2-description {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  opacity: 0;
+  left: 0;
+  text-align: center;
+  z-index: 99;
+  transition: all 0.3s;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  /* number of lines to show */
+  -webkit-box-orient: vertical;
+}
+
+.hover-2-user {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  opacity: 0;
+  left: 0;
+  text-align: center;
+  z-index: 99;
+  transition: all 0.3s;
+}
+
+.hover-2:hover .hover-2-title {
+  transform: translateY(-1rem);
+}
+
+.hover-2:hover .hover-2-description {
+  bottom: 2em;
+  opacity: 1;
+}
+
+.hover-2:hover .hover-2-user {
+  bottom: 0.2rem;
+  opacity: 1;
+}
+
+.hover-2:hover .hover-overlay {
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1));
+}
+
+/* ***************************** */
+/* ********end of diseases hover***** */
+
+.assurance_container {
+  background-image: url("https://images.unsplash.com/photo-1628595351029-c2bf17511435?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fG1lZGljaW5lfGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=1300&h=500&q=60");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 60vh;
+  width: 100vw;
+  display: grid;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  place-content: center;
+}
+
+.assurance_text {
+  text-align: center;
+  color: #ffffff;
+}
+
+/* ***************************** */
+/*  Quotes */
+/* ******************************** */
+blockquote {
+  border-left: none;
+}
+
+.quote-badge {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.quote-box {
+  overflow: hidden;
+  margin-top: -50px;
+  padding-top: -100px;
+  border-radius: 17px;
+  margin-top: 25px;
+  color: rgb(111, 111, 111);
+  width: 325px;
+}
+
+.quotation-mark {
+  margin-top: -10px;
+  font-weight: bold;
+  font-size: 100px;
+  color: white;
+  font-family: "Times New Roman", Georgia, Serif;
+}
+
+.quote-text {
+  font-size: 19px;
+  margin-top: -65px;
+}
+
+.prof-pic {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+
+  background-image: url("https://raw.githubusercontent.com/taviskaron/t-div-blockquotes/main/img/strug.jpg");
+}
+
+/* ***************************** */
+/* end quote */
+/* ******************************** */
+
+/* ***************************** */
+/* footer */
+/* ******************************** */
+footer {
+  background-color: #33383c;
+  padding: 50px 0 30px;
 }
