--- a/src/app/landing2/landing2.component.html
+++ b/src/app/landing2/landing2.component.html
@@ -6,27 +6,120 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+
 </head>
 
 <body>
+
   <div class="background">
     <div class=" jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Medical access made simple</h1>
+
+        <h1 class="display-4">Medicine access made simple</h1>
         <div class="input-group md-form form-lg form-2 pl-0" style="margin-top: 40px; margin-right: 200px;">
-          <input class="form-control my-0 py-1 red-border" type="text" placeholder="Search" aria-label="Search"
-            style="margin-left: 200px;border-radius: 50px;margin-bottom: 50px;border-radius: 50px;margin-right: 20px; height: 50px;">
-          <div class="input-group-append">
-            <span class="input-group-text red lighten-3" id="basic-text1" style="border-radius: 50px;"><i
-                class="fas fa-search text-grey" aria-hidden="true"></i></span>
-          </div>
+          <form novalidate [formGroup]="myForm" action="">
+            <input class="search_bar form-control" value={{data.name}} type="text" formControlName="name"
+              [(ngModel)]="searchText" />
+            <div class="search_bar_items" *ngIf="myForm.value.name">
+              <div class="search_bar_list" *ngFor="let data of data | filter : searchText">
+                <a class="search_bar_list" href=" /single/{{data.id}}">{{data.name}}</a>
+              </div>
+            </div>
+          </form>
+          <span class="input-group-text red lighten-3" id="basic-text1" style="border-radius: 50px;"><i
+              class="fas fa-search text-grey" aria-hidden="true"></i></span>
         </div>
-        <div class="btn"><a class="btn btn-custom" href="/donate-form">Donate Now</a>
-          <a class="btn btn-custom" href="/donate-form">View Medicines</a>
-        </div>
+      </div>
+      <div class="btn"><a class="btn btn-custom" href="/donate">Donate Now</a>
+        <a class="btn btn-custom" href="/medicines">View Medicines</a>
       </div>
     </div>
   </div>
+  <div class=" container container_disease">
+    <div *ngFor="let disease of diseases">
+
+      <a href="/medicines/">
+        <div class="hover hover-2 text-white rounded"><img src="{{cloud}}{{disease.picture}}" alt="">
+          <div class="hover-overlay"></div>
+          <div class="hover-2-content px-5 py-4">
+            <h3 class="hover-2-title text-uppercase font-weight-bold mb-0"> <span
+                class="font-weight-light">{{disease.name}}</span></h3>
+            <p class="hover-2-description  mb-0">Kindly Donate to {{disease.name}}</p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="assurance_container">
+    <div class="container assurance_text">
+      <h1>Medicine access.Made simple</h1>
+      <p style="font-size:large">Medicine approval delays cost lives. When you are in urgent need, you shouldn’t have to
+        wait. If you want to access a medicine from abroad, you need to follow strict guidelines set by your health
+        authorities.
+
+        With a prescription from your treating doctor, you can count on our expert team to safely and legally guide you
+        in accessing the medicine you need on the basis of the Named Patient regulations set by your health authorities
+      </p>
+    </div>
+  </div>
+  <div class=" container container_disease">
+    <div *ngFor="let disease of diseases">
+
+      <blockquote class="quote-box">
+        <p class="quotation-mark">
+          “
+        </p>
+        <p class="quote-text">
+          The fact is that the most interesting and elegant scientific results quite often have the property of
+          seeming abstruse and drearily incomprehensible to the uninitiated. People who are far from science in our
+          time expect a miracle and only a miracle from it and are practically unable to distinguish a real
+          scientific miracle from a trick or some kind of intellectual somersault. </p>
+        <hr>
+        <div class="blog-post-actions">
+          <p class="blog-post-bottom pull-right">
+            <img class="prof-pic" src="{{cloud}}{{disease.picture}}" alt="">
+
+            Strugatsky brothers
+            <br>
+            Monday Begins on Saturday
+          </p>
+
+        </div>
+      </blockquote>
+    </div>
+  </div>
+  <footer>
+    <div class="container">
+      <h6 class="footer-heading text-uppercase text-white">
+        Contact Us
+      </h6>
+      <p class="contact-info mt-4">
+        Contact us if need help with anything
+        <br>079625483001
+      </p>
+      <div class="mt-5">
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <a href="#"><i class="fab facebook footer-social-icon fa-facebook-f fa-sm" style="padding: 1em;"></i></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#"><i class="fab twitter footer-social-icon fa-twitter fa-sm" style="padding: 1em;"></i></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#"><i class="fab google footer-social-icon fa-google fa-sm" style="padding: 1em;"></i></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#"><i class="fab apple footer-social-icon fa-apple fa-sm" style="padding: 1em;"></i></a>
+          </li>
+        </ul>
+      </div>
+      <p class="footer-alt mb-0 f-14">
+        2022 © Medistore , All Rights Reserved
+      </p>
+    </div>
+
+  </footer>
 </body>
 
 </html>
