--- a/src/app/single-medicine/single-medicine.component.css
+++ b/src/app/single-medicine/single-medicine.component.css
@@ -15,11 +15,14 @@
 }
 
 .ratings-container {
-  
-  background-color: #23232354;
-  color: white;
-  box-shadow: 0 0 5px #3b3b3b, 0 0 5px #3b3b3b, 0 0 50px #3b3b3b,
-    0 0 25px #3b3b3b;
+  text-align: center;
+  height: 60vh;
+  display: grid;
+  place-content: center;
+  background-color: #ffffff54;
+  color: rgb(50, 50, 50);
+  box-shadow: 0 0 5px #ffc60a, 0 0 5px #ffc60a, 0 0 50px #ffc60a,
+    0 0 25px #ffc60a;
   border-radius: 10px;
   padding: 1rem 0rem 1rem 0rem;
   margin: 2rem 0rem 2rem 0rem;
@@ -29,6 +32,10 @@
   display: grid;
   place-content: center;
   grid-template-columns: 1fr 1fr 1fr;
+}
+
+.info_text {
+  margin: 20px;
 }
 
 .project-content {
@@ -129,4 +136,33 @@
 
 .hover-3:hover .hover-overlay {
   background: rgba(0, 0, 0, 0.8);
+}
+
+/* ***************************** */
+/* ******Button   */
+/* ******************************** */
+
+.btn-custom {
+  margin: 30px;
+  padding: 12px 20px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  color: #1f1f1f;
+  border-radius: 0;
+  border: 2px solid #fdbe33;
+  box-shadow: inset 0 0 0 0 #fdbe33;
+  transition: ease-out 0.3s;
+  -webkit-transition: ease-out 0.3s;
+  -moz-transition: ease-out 0.3s;
+}
+
+.btn-custom:hover {
+  color: #20212b;
+  box-shadow: inset 0 0 0 30px #fdbe33;
+}
+
+.btn-custom:focus,
+.form-control:focus {
+  box-shadow: none;
 }
