--- a/src/app/single-medicine/single-medicine.component.html
+++ b/src/app/single-medicine/single-medicine.component.html
@@ -1,5 +1,5 @@
 <div class="col-lg-6 mb-3 mb-lg-0">
-  <div class="hover hover-3 text-white rounded"><img src="" alt="">
+  <div class="hover hover-3 text-white rounded"><img src="{{cloud}}{{medicine.picture}}" alt="">
     <div class="hover-overlay"></div>
     <div class="hover-3-content px-5 py-4">
       <h1></h1>
@@ -9,8 +9,7 @@
   </div>
 </div>
 
-<h2>Units remaining {{units_remaining.units_calculated}}</h2>
-<h2>Current Price {{current_price.discounted_price}}</h2>
+
 <div class="container">
   <div class="project-content">
     <!-- <h1>{{project.title}}</h1> -->
@@ -18,19 +17,28 @@
 
     <!-- <p>{{project.description}}</p> -->
     <div class="ratings-container">
-      <h2>Website ratings </h2>
-      <ul class="list-inline list-unstyled ratings">
-        <!-- <li class="list-inline-item rating-item"> <span class="rating-circle">{{d_avg}}/5 </span></li> -->
-        <!-- <li class="list-inline-item rating-item"><span class=" rating-circle ">{{c_avg}}/5 </span></li> -->
-        <!-- <li class=" list-inline-item rating-item "><span class="rating-circle">{{u_avg}}/5 </span></li> -->
-        <li class="list-inline-item"> Design Rating
+      <h1 class="info_text">Details</h1>
+      <hr>
+      <h3 class="info_text">{{medicine.description}}</h3>
+      <h4 class="info_text">Units remaining {{units_remaining.units_calculated}}</h4>
+
+      <ul class="info_text list-inline list-unstyled ratings">
+
+        <li class="list-inline-item"> Original Price: <br>{{set_price.set_price}}
+
         </li>
-        <li class=" list-inline-item "> User Experience Rating
+        <li class=" list-inline-item "> Discount: <br>{{set_price.set_price-current_price.discounted_price}}
         </li>
-        <li class=" list-inline-item "> Design Rating
+        <li class=" list-inline-item "> Current Price: <br>{{current_price.discounted_price}}
         </li>
 
       </ul>
+      <div class="btns">
+        <a href="https://medistore-apis.herokuapp.com/prescription/{{medicine.id}} "><button
+            class="btn-custom">Purchase</button></a>
+        <button href="/donate" class="btn-custom">Donate</button>
+
+      </div>
     </div>
     <div class=" row ">
       <div class=" col-sm-5 col-md-6 col-12 pb-4 ">
